# pi-agent-core

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pi_agent_core/: __init__.py  agent.py  agent_loop.py  anthropic.py  proxy.py  types.py
tests/: anthropic_adapter.py  conftest.py  test_agent.py  test_agent_loop.py  test_integration.py
